# s3k-barocq-bench

./: .gitmodules  README.md  container.sh  hello-cheshire.sh  hello-qemu.sh  hello.sh  ipc-cheshire.sh  ipc-cold.sh  ipc-qemu.sh  ipc.sh  openocd.sh  reset.sh  setup.sh  uart.sh
.devcontainer/: Dockerfile  devcontainer.json
cross/: gcc-rv64imac.ini
hello/: meson.build  meson.options
hello/subprojects/: libs3k  s3k-barocq  s3k-c
hello/subprojects/app0/: main.c  meson.options
hello/subprojects/app0/plat/: qemu_virt.ld
hello/subprojects/app1/: main.c  meson.build
hello/subprojects/app1/plat/: qemu_virt.h
ipc/: meson.build  meson.options
ipc/subprojects/app0/: main.c  meson.build  meson.options
ipc/subprojects/app0/plat/: cheshire.h
ipc/subprojects/app1/: main.c  meson.build  meson.options
libs3k/: meson.build
libs3k/include/s3k/: syscall.h
libs3k/src/: syscall.c
scripts/: cheshire.sh  qemu.sh  qemu_virt.sh
