option('plat', type : 'combo', choices : ['qemu_virt', 'cheshire'], value : 'qemu_virt', description : 'Platform name', yield : true)
option('temporal_fence', type : 'boolean', value : false, yield : true)
option('counter', type : 'combo', choices : ['cycle', 'load', 'store'], value : 'cycle', yield : true)
